src/view/browser/render/snapshots/nifi_lens__view__browser__render__pg__snapshots__pg_detail_renders_parameter_context_row_when_bound.snap
---
source: src/view/browser/render/pg.rs
expression: out
---
"┌ ingest · process group ──────────────────────────────────────────────────────────────────────────┐"
"│┌ Identity ──────────────────────────────────────────────────────────────────────────────────────┐│"
"││Processors 1 running · 0 stopped · 0 invalid · 0 disabled                                       ││"
"││Threads    1 active                                                                             ││"
"││Queued     0 ffiles · 0 / 0 B                                                                   ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Parameter context ─────────────────────────────────────────────────────────────────────────────┐│"
"││ctx-prod  →                                                                                     ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Controller services ──────────────────────────────────────────────────────────────────────── 0 ┐│"
"││STATE      NAME                     TYPE                                                        ││"
"││                                                                                                ││"
"││                                                                                                ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Child groups ─────────────────────────────────────────────────────────────────────────────── 0 ┐│"
"││NAME                                                                      RUN    STOP   INVALID ││"
"││                                                                                                ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Recent bulletins ─────────────────────────────────────────────────────────────────────────── 0 ┐│"
"││TIME     SEV  SOURCE               MESSAGE                                                      ││"
"││                                                                                                ││"
"││                                                                                                ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
