src/view/browser/render/snapshots/nifi_lens__view__browser__render__pg__snapshots__pg_detail_sparkline_endpoint_missing.snap
---
source: src/view/browser/render/pg.rs
assertion_line: 950
expression: out
---
"┌ ingest · process group ──────────────────────────────────────────────────────────────────────────────────────────────┐"
"│┌ Identity ──────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││Processors 3 running · 1 stopped · 0 invalid · 0 disabled  no history yet                                           ││"
"││Threads    1 active                                                                                                 ││"
"││Queued     4 ffiles · 4 / 2 KB                                                                                      ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Controller services ──────────────────────────────────────────────────────────────────────────────────────────── 2 ┐│"
"││STATE      NAME                     TYPE                                                                            ││"
"││ENABLED    http-pool                StandardRestrictedSSLContextService                                             ││"
"││DISABLED   kafka-brokers            Kafka3ConnectionService                                                         ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Child groups ─────────────────────────────────────────────────────────────────────────────────────────────────── 0 ┐│"
"││NAME                                                                                          RUN    STOP   INVALID ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Recent bulletins ─────────────────────────────────────────────────────────────────────────────────────────────── 0 ┐│"
"││TIME     SEV  SOURCE               MESSAGE                                                                          ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
