src/view/browser/render/snapshots/nifi_lens__view__browser__render__pg__snapshots__pg_detail_sparkline_narrow_suppressed.snap
---
source: src/view/browser/render/pg.rs
expression: out
---
"┌ ingest · process group ┐"
"│┌ Identity ────────────┐│"
"││Processors 3 running ·││"
"││Threads    1 active   ││"
"││Queued     4 ffiles · ││"
"│└──────────────────────┘│"
"│┌ Controller service 2 ┐│"
"││STATE      NAME       ││"
"││ENABLED    http-pool  ││"
"││DISABLED   kafka-brok ││"
"││                      ││"
"││                      ││"
"││                      ││"
"││                      ││"
"│└──────────────────────┘│"
"│┌ Child groups ───── 0 ┐│"
"││ RUN    STOP   INVALID││"
"││                      ││"
"││                      ││"
"││                      ││"
"││                      ││"
"││                      ││"
"││                      ││"
"│└──────────────────────┘│"
"│┌ Recent bulletins ─ 0 ┐│"
"││TIME     SEV  SOURCE  ││"
"││                      ││"
"││                      ││"
"│└──────────────────────┘│"
"└────────────────────────┘"
